# musepack

./: .gitignore  CMakeLists.txt
common/: fastmath.c
include/mpc/: mpcdec.h  mpcmath.h
libcuefile/: CMakeLists.txt
libmpcdec/: CMakeLists.txt  Makefile.am  mpc_decoder.c  mpc_demux.c
libmpcenc/: analy_filter.c  bitstream.c  encode_sv7.c  huffsv7.c  libmpcenc.h  quant.c
libmpcpsy/: ans.c  cvd.c  fft4g.c  fft_routines.c  libmpcpsy.h  profile.c  psy.c  psy_tab.c
libreplaygain/: CMakeLists.txt  configure.in  libreplaygain.vcproj  libreplaygain.vcxproj  libreplaygain.vcxproj.filters
libreplaygain/include/: Makefile.am
libreplaygain/src/: CMakeLists.txt  Makefile.am  gain_analysis.c
mpc2sv8/: mpc2sv8.c
mpcchap/: iniparser.c  mpcchap.c
mpcdec/: mpcdec.c
mpcenc/: config.h  mpcenc.c  mpcenc.h  predict.h  wave_in.c  winmsg.c
mpcgain/: mpcgain.c
win32/: libcommon.vcxproj  libcommon.vcxproj.filters  libmpcdec.vcxproj  libmpcdec.vcxproj.filters  libmpcenc.vcxproj  libmpcenc.vcxproj.filters  libmpcpsy.vcxproj  libmpcpsy.vcxproj.filters  libwavformat.vcxproj  libwavformat.vcxproj.filters  mpc2sv8.vcxproj  mpc2sv8.vcxproj.filters  mpccut.vcxproj  mpccut.vcxproj.filters  mpcdec.vcxproj  mpcdec.vcxproj.filters  mpcenc.vcxproj  mpcenc.vcxproj.filters  mpcgain.vcxproj  mpcgain.vcxproj.filters  musepack.sln
